fix align

--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@ body {
 
 #root {
   background-color: #292929;
+  height: 100vh;
 }
